# openrtb-rust

./: .travis.yml  AUTHORS  Cargo.toml  LICENSE-MIT  README.md  aliases.js  appveyor.yml  index.html  search-index.js
.github/workflows/: ci.yaml
examples/: prebid.rs
openrtb/: all.html  index.html  sidebar-items.js
openrtb/native/: index.html  sidebar-items.js
openrtb/serde_utils/: type.Ext.html
openrtb/v2_5/: AuctionType.t.html  Automotive.t.html  Banner.t.html  BidRequest.t.html  Business.t.html  Education.t.html  Ext.t.html  FoodAndDrink.t.html  HealthAndFitness.t.html  HobbiesAndInterests.t.html  HomeAndGarden.t.html  Imp.t.html  NonStandardContent.t.html  PMP.t.html  PersonalFinance.t.html  RealEstate.t.html  Regulations.t.html  Society.t.html  TechnologyAndComputing.t.html  enum.AdPosition.html  enum.ArtsAndEntertainment.html  enum.AuctionType.html  enum.Automotive.html  enum.BannerAdType.html  enum.Business.html  enum.Careers.html  enum.Category.html  enum.Education.html  enum.FamilyAndParenting.html  enum.FoodAndDrink.html  enum.HealthAndFitness.html  enum.HobbiesAndInterests.html  enum.HomeAndGarden.html  enum.IllegalContent.html  enum.LawGovernmentAndPolitics.html  enum.News.html  enum.NonStandardContent.html  enum.PersonalFinance.html  enum.Pets.html  enum.RealEstate.html  (+27 more)
src/: lib.rs  macros.rs  serde_utils.rs
src/native/: mod.rs
src/openrtb/: lib.rs.html  macros.rs.html  serde_utils.rs.html
src/v2_5/: ad_position.rs  app.rs  audio.rs  banner.rs  banner_ad_type.rs  bid.rs  bid_request.rs  bid_response.rs  category.rs  data.rs  device.rs  format.rs  geo.rs  imp.rs  metric.rs  mod.rs  native.rs  pmp.rs  publisher.rs  site.rs  (+7 more)
tests/: test_files.rs
(+99 files in other folders)
