[package]
name = "openrtb"
version = "0.1.0"
authors = ["Tim Cheeseman <tcheeseman@appnexus.com>"]
description = "OpenRTB v2.5 and OpenRTB Dynamic Native Ads v1.2 types for rust."
keywords = ["openrtb"]
categories = ["encoding"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/openrtb/"
homepage = "https://cirla.github.io/openrtb-rust"
repository = "https://github.com/cirla/openrtb-rust"

[badges]
travis-ci = { repository = "cirla/openrtb-rust" }
appveyor = { repository = "cirla/openrtb-rust" }

[lib]
name = "openrtb"

[dependencies]
phf = { version = "~0.8.0", features = ["macros"] }
phf_macros = "~0.8.0"
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"

[dev-dependencies]
reqwest = { version = "~0.10.6", features = ["json", "blocking"] }
