[package]
name = "openrtb"
version = "0.2.0"
authors = ["Tim Cheeseman <tcheeseman@appnexus.com>", "Kon Rybnikov <k-bx@k-bx.com>"]
description = "OpenRTB v2.5 and OpenRTB Dynamic Native Ads v1.2 types for rust."
keywords = ["openrtb"]
categories = ["encoding"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/openrtb/"
homepage = "https://github.com/k-bx/openrtb-rust"
repository = "https://github.com/k-bx/openrtb-rust"

[badges]
travis-ci = { repository = "k-bx/openrtb-rust" }
appveyor = { repository = "k-bx/openrtb-rust" }

[lib]
name = "openrtb"

[dependencies]
phf = { version = "~0.8.0", features = ["macros"] }
phf_macros = "~0.8.0"
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"

[dev-dependencies]
reqwest = { version = "~0.10.6", features = ["json", "blocking"] }
